replaces well with card for bootstrap 4 and card-body classes to align text correctly

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 	font-family: oswald;
 
 
+
 }
 
 .radio{
@@ -32,7 +33,7 @@ body{
 }
 
 #results{
-	color: white;
+	
 	font-family: oswald;
 }
 
